--- a/packages/flags/package.json
+++ b/packages/flags/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperta/logging",
   "version": "1.0.0",
-  "description": "A delightful (and fast) way to log",
+  "description": "A delightful way to page",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
