--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -4,13 +4,16 @@
   "description": "A delightful (and fast) way to log",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "bun build ./src/index.ts --outdir ./build --minify && bun run build:declaration",
+    "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json"
   },
   "author": {
     "name": "Liam Grossman"
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^24.9.2",
     "typescript": "^5.0.0"
   }
 }
