--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -2,7 +2,7 @@
   "name": "@aperta/logging",
   "version": "1.0.0",
   "description": "A delightful (and fast) way to log",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bun build ./src/index.ts --outdir ./build --minify --target node && bun run build:declaration",
