--- a/packages/logging/package.json
+++ b/packages/logging/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bun build ./src/index.ts --outdir ./build --minify --target node && bun run build:declaration",
-    "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json"
+    "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json",
+    "release": "bun run build && changeset publish"
   },
   "author": {
     "name": "Liam Grossman"
@@ -15,5 +16,8 @@
   "devDependencies": {
     "@types/node": "^24.9.2",
     "typescript": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
