--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bun build ./src/index.ts --outdir ./build --minify --target node && bun run build:declaration",
-    "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json"
+    "build:declaration": "tsc --emitDeclarationOnly --project tsconfig.types.json",
+    "release": "bun run build && changeset publish"
   },
   "author": {
     "name": "Liam Grossman"
@@ -19,7 +20,7 @@
   "peerDependencies": {
     "redis": "^5.1.1"
   },
-  "dependencies": {
-    "l": "^0.6.0"
+  "publishConfig": {
+    "access": "public"
   }
 }
